crates/phoenix-ir/src/snapshots/phoenix_ir__tests__lower_for_range_with_else.snap
---
source: crates/phoenix-ir/src/tests.rs
expression: ir
---
func @main() -> void {
  bb0:
    v0 = const_i64 0
    v1 = const_i64 3
    v2 = alloca i64
    store v2, v0
    jump bb1
  bb1:
    v3 = load v2
    v4 = ilt v3, v1
    branch v4, bb2, bb5
  bb2:
    v5 = load v2
    v6 = builtin_call @toString(v5)
    builtin_call @print(v6)
    jump bb3
  bb3:
    v7 = load v2
    v8 = const_i64 1
    v9 = iadd v7, v8
    store v2, v9
    jump bb1
  bb4:
    jump bb6
  bb5:
    v10 = const_string "empty"
    builtin_call @print(v10)
    jump bb6
  bb6:
    return
}
