crates/phoenix-ir/src/snapshots/phoenix_ir__tests__lower_function_call.snap
---
source: crates/phoenix-ir/src/tests.rs
expression: ir
---
func @add(a: i64, b: i64) -> i64 {
  bb0(v0: i64, v1: i64):
    v2 = iadd v0, v1
    return v2
}

func @main() -> i64 {
  bb0:
    v0 = const_i64 1
    v1 = const_i64 2
    v2 = call f0(v0, v1)
    return v2
}
