crates/phoenix-ir/src/snapshots/phoenix_ir__tests__lower_if_else.snap
---
source: crates/phoenix-ir/src/tests.rs
expression: ir
---
func @main() -> void {
  bb0:
    v0 = const_i64 10
    v1 = const_i64 5
    v2 = igt v0, v1
    branch v2, bb1, bb3
  bb1:
    v3 = const_string "big"
    builtin_call @print(v3)
    jump bb2
  bb2:
    return
  bb3:
    v4 = const_string "small"
    builtin_call @print(v4)
    jump bb2
}
