crates/phoenix-ir/src/snapshots/phoenix_ir__tests__lower_if_else_if_else.snap
---
source: crates/phoenix-ir/src/tests.rs
expression: ir
---
func @main() -> void {
  bb0:
    v0 = const_i64 5
    v1 = const_i64 10
    v2 = igt v0, v1
    branch v2, bb2, bb3
  bb1:
    return
  bb2:
    v3 = const_string "big"
    builtin_call @print(v3)
    jump bb1
  bb3:
    v4 = const_i64 0
    v5 = igt v0, v4
    branch v5, bb5, bb6
  bb4:
    jump bb1
  bb5:
    v6 = const_string "medium"
    builtin_call @print(v6)
    jump bb4
  bb6:
    v7 = const_string "small"
    builtin_call @print(v7)
    jump bb4
}
