crates/phoenix-ir/src/snapshots/phoenix_ir__tests__lower_if_expr_all_branches_return.snap
---
source: crates/phoenix-ir/src/tests.rs
expression: ir
---
func @classify(n: i64) -> string {
  bb0(v0: i64):
    v1 = const_i64 0
    v2 = ilt v0, v1
    branch v2, bb2, bb3
  bb1:
    unreachable
  bb2:
    v3 = const_string "neg"
    return v3
  bb3:
    v4 = const_string "non-neg"
    return v4
}

func @main() -> void {
  bb0:
    v0 = const_i64 1
    v1 = ineg v0
    v2 = call f0(v1)
    builtin_call @print(v2)
    return
}
