crates/phoenix-ir/src/snapshots/phoenix_ir__tests__lower_impl_block_method.snap
---
source: crates/phoenix-ir/src/tests.rs
expression: ir
---
func @main() -> i64 {
  bb0:
    v0 = const_i64 3
    v1 = const_i64 7
    v2 = struct_alloc @Pair(v0, v1)
    v3 = call f1(v2)
    return v3
}

func @Pair.sum(self: struct.Pair) -> i64 {
  bb0(v0: struct.Pair):
    v1 = struct_get_field v0, 0
    v2 = struct_get_field v0, 1
    v3 = iadd v1, v2
    return v3
}
