crates/phoenix-ir/src/snapshots/phoenix_ir__tests__lower_indirect_closure_call.snap
---
source: crates/phoenix-ir/src/tests.rs
expression: ir
---
func @apply(f: closure(i64) -> i64, x: i64) -> i64 {
  bb0(v0: closure(i64) -> i64, v1: i64):
    v2 = call_indirect v0(v1)
    return v2
}

func @main() -> i64 {
  bb0:
    v0 = closure_alloc f2
    v1 = const_i64 21
    v2 = call f0(v0, v1)
    return v2
}

func @__closure_0(__env: closure(i64) -> i64, n: i64) -> i64 {
  bb0(v0: closure(i64) -> i64, v1: i64):
    v2 = const_i64 2
    v3 = imul v1, v2
    return v3
}
